# openshark

./: .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  LSP_ASYNC_DIAGNOSTICS_PLAN.md  README.md  RELEASE_NOTES_v1.1.0.md  RESEARCH_HARNESSES.md  ROADMAP.md  ROADMAP_v1.2.md  STATUS.md  _old_ptf.txt  _old_synth2.txt  _old_tc2.txt  analyze_errors.py  apply_all.py  apply_changes.py  fix_remaining.py  install.sh
docs/: ROADMAP.md  v1.6-roadmap.md
docs/plans/: 2025-06-02-end-all-be-all-roadmap.md
src/: code_index.rs  context_mode.rs  context_pinner.rs  diff.rs  doctor.rs  headless.rs  image_utils.rs  json_output.rs  linting.rs  main.rs  mcp_server.rs  plugins.rs  repo_map.rs  sandbox.rs  self_correction.rs  session.rs  utils.rs  watch.rs
src/agent/: coding.rs  mod.rs  persona.rs  soul.rs
src/api/: handlers.rs  mod.rs  ws.rs
src/cache/: mod.rs
src/capabilities/: agentic.rs  communication.rs  execution.rs  media.rs  memory.rs  mod.rs  platform.rs  productivity.rs  smart_home.rs  web.rs
src/config/: mod.rs  setup.rs
src/evolution/: mod.rs
src/gateway/: channel_state.rs  commands.rs  discord.rs  events.rs  http.rs  matrix.rs  message_router.rs  mod.rs  platform.rs  session_branch.rs  slack.rs  telegram.rs  unified_router.rs
src/guardian/: mod.rs
src/harness/: engine.rs  event.rs  mod.rs  response.rs
src/integrations/: claude.rs  claw.rs  hermes.rs  mod.rs  opencode.rs  registry.rs
src/lsp/: diagnostics.rs  manager.rs  mod.rs  transport.rs
src/mcp/: mod.rs  protocol.rs  transport.rs
src/memory/: compression.rs  context.rs  embeddings.rs  hierarchy.rs  mod.rs  store.rs
src/providers/: mod.rs
src/router/: mod.rs
src/security/: guardrails.rs  identity.rs  mod.rs  pii.rs  profiles.rs  sandbox.rs
src/self_improve/: mod.rs
src/skills/: mod.rs
src/skills/builtin/: debugging.md  docker.md  git.md  rust.md  testing.md
src/slash_commands/: mod.rs
src/swarm/: agent_runner.rs  consensus.rs  mod.rs  persona_filter.rs  roles.rs
src/tools/: android.rs  async.rs  checkpoint.rs  custom.rs  detection.rs  edit.rs  fs.rs  git.rs  lsp.rs  mcp.rs  mod.rs  refactor.rs  search.rs  terminal.rs  test_runner.rs
src/tui/: ascii_art.rs  bookmarks.rs  chat.rs  clipboard_image.rs  command_palette.rs  crossterm_render.rs  image_display.rs  mod.rs  mouse.rs  render.rs  stream.rs  syntax_highlight.rs  theme.rs  thinking.rs  tool_parsing.rs  vim_input.rs
src/tui/components/: chat.rs  mod.rs  sidebar.rs  splash.rs
