[package]
name = "openshark"
version = "1.1.0"
edition = "2024"
authors = ["synth <synthalorian@gmail.com>"]
description = "The harness that learns. The agent that decides."
license = "MIT"
repository = "https://github.com/synthalorian/openshark"
keywords = ["ai", "harness", "coding", "agent", "llm"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.91"

[[bin]]
name = "openshark"
path = "src/main.rs"

[features]
default = ["discord", "telegram"]
discord = ["serenity"]
telegram = ["teloxide"]
slack = ["slack-morphism"]
matrix = ["matrix-sdk"]
hermes-bridge = []
claw-delegation = []
opencode-delegation = []
claude-delegation = []
github-native = []
web-api = []

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# CLI + TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"

# HTTP + API
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eventsource-stream = "0.2"
futures = "0.3"
urlencoding = "2.1"

# Config + Utils
toml = "0.8"
serde_yaml = "0.9"
dirs = "6.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
unicode-width = "0.2"
walkdir = "2.5"
regex = "1.11"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3.1.2"
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache", "rustls_backend"], optional = true }
async-trait = "0.1"
teloxide = { version = "0.17", features = ["macros"], optional = true }
slack-morphism = { version = "2.22", optional = true }
matrix-sdk = { version = "0.17", optional = true }
# Optional integration deps (only compiled when feature enabled)
octocrab = { version = "0.43", optional = true }
axum = { version = "0.8", optional = true }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
tungstenite = "0.29.0"
arboard = { version = "3.5", default-features = false, features = ["wayland-data-control", "image-data"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
